--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Las Tres B Catálogo de Productos</h1>
+        <h1>Las Tres B </h1>
     </header>
 
     <div class="container">
