--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -709,6 +709,37 @@
                 <h3>SET DE 3 PIEZAS TEFLON</h3>
                 <p>Precio: $50.200</p>
             </div>
+
+              <div class="product">
+                <img src="" alt="Producto 3">
+                <h3>Olla de Aluminio fundido cuadrada</h3>
+                <p>Precio: $48.900</p>
+            </div>
+
+                           <div class="product">
+                <img src="" alt="Producto 3">
+                <h3>Olla y Sarten de Aluminio fundido</h3>
+                <p>Precio: $48.900</p>
+            </div>
+
+                           <div class="product">
+                <img src="" alt="Producto 3">
+                <h3>Olla de 3L Aluminio fundido</h3>
+                <p>Precio: $48.900</p>
+            </div>
+
+                           <div class="product">
+                <img src="" alt="Producto 3">
+                <h3>Olla de Aluminio fundido cuadrada</h3>
+                <p>Precio: $48.900</p>
+            </div>
+
+                         <div class="product">
+                <img src="" alt="Producto 3">
+                <h3>Olla de 5L Aluminio fundido</h3>
+                <p>Precio: $48.900</p>
+            </div>
+             
             
             <div class="product">
                 <img src="https://mcdbackend.com/storage/images/products/720/LDKdGX5QPBCGUaGQ2a8DeVeNqnOqSFaYbOjGlwVJ.jpg" alt="Producto 3">
