--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -419,7 +419,7 @@
             </div>
 
             <div class="product">
-                <img src="" alt="Producto 3">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.musichouse.com.ar%2Fproductos%2Ftermo-stanley-flip-straw-jug-1-9-lts-blanco%2F&psig=AOvVaw0gP2i9EAFKBbkftElKjNVf&ust=1727185005514000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIjPreCX2YgDFQAAAAAdAAAAABAE" alt="Producto 3">
                 <h3>Jarra Flip simil stanley 2.5L con mate y bombilla</h3>
                 <p>Precio: $47.900</p>
             </div>
