--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -15,7 +15,7 @@
                 <div class="dropdown-content">
                     <a href="#articulos-de-verano">Artículos de Verano</a>
                     <a href="#auriculares">Auriculares</a>
-                    <a href="#Peluquería">Higiene</a>
+                    <a href="#Peluquería">Peluquería</a>
                     <a href="#luces-y-cargadores">Luces y Cargadores</a>
                     <a href="#materos">Materos</a>
                     <a href="#parlantes">Parlantes</a>
