--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -20,7 +20,7 @@
                     <a href="#materos">Materos</a>
                     <a href="#parlantes">Parlantes</a>
                     <a href="#demás-productos">Demás Productos</a>
-                    <a href="#objetos-hogar">Objetos del Hogar</a>
+                    <a href="#objetos-del-hogar">Objetos del Hogar</a>
                 </div>
             </div>
         </div>
