--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -9,19 +9,17 @@
 <body>
     <header>
         <h1>Las Tres B </h1>
-        </header>
-        <header>
         <div class="header-container">
             <div class="dropdown">
                 <div class="dropdown-content">
                     <a href="#articulos-de-verano">Artículos de Verano</a>
                     <a href="#auriculares">Auriculares</a>
-                    <a href="#Peluquería">Peluquería</a>
-                    <a href="#luces-y-cargadores">Luces y Cargadores</a>
+                    <a href="#Higiene">Higiene</a>
+                    <a href="#luces-cargadores">Luces y Cargadores</a>
                     <a href="#materos">Materos</a>
                     <a href="#parlantes">Parlantes</a>
                     <a href="#demás-productos">Demás Productos</a>
-                    <a href="#objetos-del-hogar">Objetos del Hogar</a>
+                    <a href="#objetos-hogar">Objetos del Hogar</a>
                 </div>
             </div>
         </div>
