--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -14,12 +14,12 @@
                 <div class="dropdown-content">
                     <a href="#articulos-de-verano">Artículos de Verano</a>
                     <a href="#auriculares">Auriculares</a>
-                    <a href="#Higiene">Higiene</a>
-                    <a href="#luces-cargadores">Luces y Cargadores</a>
+                    <a href="#Peluquería">Higiene</a>
+                    <a href="#luces-y-cargadores">Luces y Cargadores</a>
                     <a href="#materos">Materos</a>
                     <a href="#parlantes">Parlantes</a>
                     <a href="#demás-productos">Demás Productos</a>
-                    <a href="#objetos-hogar">Objetos del Hogar</a>
+                    <a href="#objetos-del-hogar">Objetos del Hogar</a>
                 </div>
             </div>
         </div>
