--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -22,6 +22,9 @@
                     <a href="#objetos-del-hogar">Objetos del Hogar</a>
                 </div>
             </div>
+                <a href="https://www.instagram.com/lastresb.lp" class="instagram-link" target="_blank">
+                <img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-square2-512.png" alt="Instagram" class="instagram-icon">
+            </a>
         </div>
     </header>
 
