--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Las Tres B </h1>
         <div class="header-container">
+            <button class="dropbtn">Selecciona un artículo</button>
             <div class="dropdown">
                 <div class="dropdown-content">
                     <a href="#articulos-de-verano">Artículos de Verano</a>
@@ -1432,5 +1433,6 @@
                 <p>Precio: $8.000</p>
             </div>
         </div>
+             <script src="dropbtn.js"></script>
 </body>
 </html>
