--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -77,7 +77,7 @@
             </div>
             
             <div class="product">
-                <img src="https://scontent.flpg1-2.fna.fbcdn.net/v/t39.30808-6/419360636_865485312254215_8364833052395176275_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeGEfVkGaCiTjuGU9SW3zo0n78y7bGk-LXjvzLtsaT4teM3fjR2QgZgg0BMDJ5bU8iGIP3imAhEi_Ci_ScUkxzxt&_nc_ohc=vj0nGkFAgbYQ7kNvgEBcroD&_nc_ht=scontent.flpg1-2.fna&_nc_gid=AgxMtZqczzuh3b6Je-XVpPS&oh=00_AYDSpfv9VKwF4BpaBkD1kt3HNtcI5gO29nCYc3kAMD0iZg&oe=66EA0B30" alt="Producto 1">
+                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_716188-MLM75319788171_032024-F.webp" alt="Producto 1">
                 <h3>Inflable Salva Vidas Cocodrilo/Conejito Rosa</h3>
                 <p>Precio: $10.300</p>
             </div>
