Actualizar index.html

--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -248,7 +248,7 @@
             </div>
             
             <div class="product">
-                <img src="https://scontent.flpg1-2.fna.fbcdn.net/v/t39.30808-6/425330112_826458942825198_5861200221112929030_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeEWk0ZWRynMeZge58VLMZUfcwyLKte8DiRzDIsq17wOJP0oONWo1oMeHlGQrIJ9h7emV6CwVAxtLgEkRpuF73H9&_nc_ohc=ACi6_g5sVb4Q7kNvgHpU75L&_nc_ht=scontent.flpg1-2.fna&_nc_gid=AEO_sPO25hAX70EfOBoqx4X&oh=00_AYB1SRQ-rgGbJpQ71QIrjOu1HqZFJa5WT60DcfUj3rL9fw&oe=66EA0219" alt="Producto 4">
+                <img src="https://dcdn.mitiendanube.com/stores/001/827/432/products/diseno-sin-titulo-2024-05-27t130554-362-768x768-077e273954963792dc17168484011802-640-0.webp" alt="Producto 4">
                 <h3>Patillera Vintage</h3>
                 <p>Precio: $13.200</p>
             </div>
