Actualizar index.html

--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -606,7 +606,7 @@
             </div>
 
             <div class="product">
-                <img src="https://mcdbackend.com/storage/images/products/720/LkuNNY0CpR3RiQ0XkZeU0cKAicZgzYLLBsW45X5A.jpg" alt="Producto 8">
+                <img src="https://images.bidcom.com.ar/resize?src=https://www.bidcom.com.ar/publicacionesML/productos/BALANZ03/1000x1000-BALANZ03.jpg&w=500&q=100" alt="Producto 8">
                 <h3>Balanza de cocina blanca Max 10kg</h3>
                 <p>Precio: $10.800</p>
             </div>
