Actualizar index.html

--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -525,7 +525,7 @@
             </div>
                         
             <div class="product">
-                <img src="https://mcdbackend.com/storage/images/products/720/QSKSyrJWwdO5My9PfI6UncxJ32K1FGD1Lt59rzpT.jpg" alt="Producto 7">
+                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_956078-MLU74110424518_012024-F.webp" alt="Producto 7">
                 <h3>Parlante Torre</h3>
                 <p>Precio: $205.500</p>
             </div>
