Actualizar index.html

--- a/Folleto/index.html
+++ b/Folleto/index.html
@@ -108,7 +108,7 @@
             </div>
             
             <div class="product">
-                <img src="https://fussetti.b-cdn.net/2106-large_default/vent-de-pie-centrex-20-100w.jpg" alt="Producto 1">
+                <img src="https://acdn.mitiendanube.com/stores/002/787/946/products/ventilador-lutin-2-4158e725fcac1de7ad17071435685562-1024-1024.jpg">
                 <h3>VENTILADOR U-LINE 3 EN 1</h3>
                 <p>Precio: $35.000</p>
             </div>
